# simple-rts-rl

./: .gitignore  README.md  analysis.ipynb  notebook.ipynb  pyproject.toml  train.ipynb  tutorial.ipynb
docs/source/: conf.py  gamerules.md  index.md
src/: main.py  playable.py
src/rl/: carbs_pqn.py  eval.py  model.py  pqn.py  utils.py
src/rl/config/: carbs_pqn.yaml
src/rts/: config.py  env.py  state.py  utils.py  visualizaiton.py  visualization.py
tests/: helpers.py
tests/benchmark/: test_init.py  test_move.py  test_step.py
tests/unit/: test_init.py  test_reward.py  test_sequences.py  test_step.py  test_utils.py  test_validate.py
