[project]
name = "simple-rts-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.89",
    "flax>=0.10.3",
    "furo>=2024.8.6",
    "jax>=0.5.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "myst-parser>=4.0.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=8.2.1",
]
