[project]
name = "simple-rts-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.89",
    "flax>=0.10.3",
    "furo>=2024.8.6",
    "jax[cuda12]>=0.5.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "myst-parser>=4.0.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx>=8.2.1",
    "pytest>=8.3.4",
    "pytest-benchmark>=5.1.0",
    "pygame>=2.6.1",
    "optax>=0.2.4",
    "distinctipy>=1.3.4",
    "carbs",
    "mlflow>=2.22.0",
    "pynvml>=12.0.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
carbs = { git = "https://github.com/imbue-ai/carbs" }
